# franka_practice

./: README.md
franka_practice/: CMakeLists.txt  package.xml
franka_practice/launch/: move_franka.launch
franka_practice/src/: move_franka.cpp
kiosk_description/: CMakeLists.txt  package.xml
kiosk_description/description/: kiosk.urdf  kiosk.urdf.xacro  kiosk.xacro
kiosk_description/launch/: gazebo.launch  snaak_world.launch
moveit_practice/: CMakeLists.txt  package.xml
moveit_practice/include/: move.h  pick_and_place.h
moveit_practice/src/: move.cpp  pick_and_place.cpp
