<?xml version="1.0"?>
<package format="2">
  <name>fci_practice</name>
  <version>0.0.1</version>
  <description>fci practice package</description>

  <maintainer email="bertonoliver50@gmail.com">Oliver Berton</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>franka_gripper</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>franka_gripper</exec_depend>

</package>
