<package format="2">
  <name>kiosk_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for base</p>
  </description>
  <author>TODO</author>
  <maintainer email="oberton@outlook.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>rviz</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
